[gd_scene load_steps=3 format=3 uid="uid://b3fivdkfeiiwn"]

[ext_resource type="Script" path="res://Clayton/Pause/paused_menu.gd" id="1_rcnpn"]
[ext_resource type="FontFile" uid="uid://d3qi3ob7t6gkc" path="res://Clayton/Daydream.ttf" id="2_ja3x2"]

[node name="PausedMenu" type="Control"]
process_mode = 3
visible = false
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rcnpn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.658824, 1, 0.466667)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ja3x2")
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="ResumeBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ja3x2")
text = "Resume"

[node name="ControlsBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ja3x2")
text = "Controls"

[node name="QuitBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ja3x2")
text = "Quit"

[connection signal="pressed" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="GridContainer/ControlsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
